Fix feedback overflow for long texts

--- a/mentoring/public/css/mentoring.css
+++ b/mentoring/public/css/mentoring.css
@@ -129,3 +129,7 @@
 .mentoring input[type="radio"] {
     margin: 0;
 }
+
+.mentoring .feedback {
+    max-height: 100%;
+}
